--- a/.github/workflow/snk.yml
+++ b/.github/workflow/snk.yml
@@ -1,3 +1,4 @@
+
 name: generate animation
 
 on:
@@ -25,7 +26,7 @@ jobs:
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk@master
         with:
-          github_user_name: zhaocong122
+          github_user_name: Cpaulyz
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       # push the content of <build_dir> to a branch
@@ -36,5 +37,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          GITHUB_TOKEN: ${{ secrets.SNK_GITHUB_TOKEN }}
