--- a/.github/workflow/snk.yml
+++ b/.github/workflow/snk.yml
@@ -26,7 +26,7 @@ jobs:
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk@master
         with:
-          github_user_name: Cpaulyz
+          github_user_name: zhaocong122
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       # push the content of <build_dir> to a branch
