--- a/.github/workflows/snk.yml
+++ b/.github/workflows/snk.yml
@@ -1,9 +1,9 @@
-name: snake game from a github user contributions graph
+name: generate animation
 
 on:
-  # run automatically at 0 o'clock
+  # run automatically every 6 hours
   schedule:
-    - cron: "0 0 * * * " 
+    - cron: "0 */8 * * *" 
   
   # allows to manually run the job at any time
   workflow_dispatch:
@@ -28,7 +28,7 @@ jobs:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark 
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
